final: Dragon is moving and growling.